--- a/assignment3.html
+++ b/assignment3.html
@@ -64,7 +64,7 @@ ul li a:hover {
 <div> 
     
 <ul>
-  <li><a href="home.html">HOME</a></li>
+  <li><a href="index.html">HOME</a></li>
   <li><a href="assignment1.html">*</a></li>
   <li><a href="assignment2.html">*</a></li>
   <li><a href="assignment4.html">*</a></li>
